tests/compile_fail/non_void_lambda.cc
// SPDX-License-Identifier: MIT
#include <umitest/test.hh>

void test() {
    umi::test::Suite s("x");
    s.run("x", [](auto& ctx) -> bool { return ctx.eq(1, 1); });
}
